# odbc2parquet

./: .gitignore  CHANGELOG.md  Cargo.toml  Changelog.md  Contributing.md  Cross.toml  Dockerfile  License  README.md  docker-compose.yml  release-plz.toml  rust-toolchain  tmp.par
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  release-bin.yml  release-plz.yml  release.yml  test-bin-build.yml  test.yml
docker/: import-data.sh  setup.sql
docker/dev/: Dockerfile
docker/mssql/: Dockerfile  entrypoint.sh  setup.sql
src/: buffer.rs  connection.rs  encoding.rs  enum_args.rs  execute.rs  input.rs  insert.rs  logging.rs  main.rs  odbc_buffer.rs  parquet_buffer.rs  query.rs
src/query/: batch_size_limit.rs  binary.rs  boolean.rs  column_strategy.rs  conversion_strategy.rs  current_file.rs  date.rs  decimal.rs  fetch_batch.rs  fetch_strategy.rs  identical.rs  integer.rs  odbc_buffer_item.rs  parquet_writer.rs  strategy.rs  table_strategy.rs  text.rs  time.rs  timestamp.rs  timestamp_precision.rs  timestamp_tz.rs
tests/: empty_document.par  insert.par  integration.rs  lib.rs  test-table.xls  test-table.xlsx  test.accdb
tests/.github/workflows/: rust.yml
