[package]
name = "odbc2parquet"
version = "8.0.0"
authors = ["Markus Klein"]
edition = "2021"
repository = "https://github.com/pacman82/odbc2parquet"
documentation = "https://docs.rs/odbc2parquet/"
license = "MIT"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Query an ODBC data source and store the result in a Parquet file."

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["odbc", "parquet", "sql"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
stderrlog = "0.6.0"
log = "0.4.27"
chrono = "0.4.41"
atoi = "2.0.0"
num-traits = "0.2.19"
clap_complete = "4.5.52"
bytesize = "2.0.1"
io-arg = "0.2.1"
tempfile = "3.20.0"

# Using ODBC version 3.5 is avoiding warnings with drivers which only support 3.5 as oppossed to
# 3.8. Currently odbc2parquet does not need to use use any ODBC version 3.8 features.
[dependencies.odbc-api]
version = "13.0.1"
features = ["odbc_version_3_5"]

[dependencies.clap]
version = "4.5.39"
features = ["derive", "env"]

[dependencies.parquet]
version = "55.1.0"
default-features = false
features =  ["snap", "brotli", "flate2", "lz4", "zstd", "base64"]

[dev-dependencies]
assert_cmd = "2.0.17"
bytes = "1.10.1"
lazy_static = "1.5.0"
predicates = "3.1.3"

[profile.release]
# Panics should only be caused by logic errors and are considered bugs
panic = 'abort'
# Link time Optimization
lto = true
